fix for layout issues with inline svg

--- a/src/_assets/stylesheets/style.scss
+++ b/src/_assets/stylesheets/style.scss
@@ -820,6 +820,9 @@ em {
     display: flex;
     align-items: center;
   }
+  svg {
+    max-width: 100%;
+  }
 }
 
 .break-50 {
